--- a/oprot.plot.wpf/packages.config
+++ b/oprot.plot.wpf/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="6.3.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="OxyPlot.Core" version="2.0.0-unstable1013" targetFramework="net461" />
   <package id="OxyPlot.Wpf" version="2.0.0-unstable1013" targetFramework="net461" />
+  <package id="PropertyChanged.Fody" version="3.3.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
