--- a/oprot.plot.wpf/oprot.plot.wpf.csproj
+++ b/oprot.plot.wpf/oprot.plot.wpf.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows10.0.22621.0</TargetFramework>
     <UseWPF>true</UseWPF>
-	<AssemblyName>protplot</AssemblyName>
+	<AssemblyName>oprot.plot.wpf</AssemblyName>
     <RootNamespace>oprot.plot.wpf</RootNamespace>
   </PropertyGroup>
 
@@ -47,5 +47,15 @@
     <Resource Include="Resources\TableIcon.png" />
     <Resource Include="Resources\UndoIcon.png" />
   </ItemGroup>
+	
+	<Target Name="RemoveDuplicateAnalyzers" BeforeTargets="CoreCompile">
+		<!-- Work around https://github.com/dotnet/wpf/issues/6792 -->
 
+		<ItemGroup>
+			<FilteredAnalyzer Include="@(Analyzer-&gt;Distinct())" />
+			<Analyzer Remove="@(Analyzer)" />
+			<Analyzer Include="@(FilteredAnalyzer)" />
+		</ItemGroup>
+	</Target>
+	
 </Project>
