lots of changes... so long ago I can't remember what all this stuff is

--- a/oprot.plot.wpf/oprot.plot.wpf.csproj
+++ b/oprot.plot.wpf/oprot.plot.wpf.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
     <UseWPF>true</UseWPF>
 	<AssemblyName>oprot.plot.wpf</AssemblyName>
     <RootNamespace>oprot.plot.wpf</RootNamespace>
@@ -25,6 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.4.0" />
+    <PackageReference Include="gong-wpf-dragdrop" Version="3.2.0" />
     <PackageReference Include="OxyPlot.Wpf" Version="2.1.0" />
   </ItemGroup>
 
