--- a/oprot.plot.core/oprot.plot.core.csproj
+++ b/oprot.plot.core/oprot.plot.core.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <AssemblyName>oprot.plot.core</AssemblyName>
     <OutputType>Library</OutputType>
